<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:contentDescription="@string/tab_homepage"
        android:icon="@drawable/ic_home_selector"
        android:orderInCategory="1"
        android:title="@string/tab_homepage" />

    <item
        android:id="@+id/transferFragment"
        android:contentDescription="@string/tab_transfer"
        android:icon="@drawable/ic_transfer_selector"
        android:orderInCategory="2"
        android:title="@string/tab_transfer" />

    <item
        android:id="@+id/addressBookFragment"
        android:contentDescription="@string/tab_addressbook"
        android:icon="@drawable/ic_addressbook_selector"
        android:orderInCategory="3"
        android:title="@string/tab_addressbook" />

</menu>