<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.mob.welups.ui.home.HomeFragment"
        android:label="@string/tab_homepage"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/transferFragment"
        android:name="com.mob.welups.ui.transfer.TransferFragment"
        android:label="@string/tab_transfer"
        tools:layout="@layout/fragment_transfer" />

    <fragment
        android:id="@+id/addressBookFragment"
        android:name="com.mob.welups.ui.address_book.AddressBookFrag"
        android:label="@string/tab_addressbook"
        tools:layout="@layout/fragment_address_book" />
</navigation>