<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/onBoarding1"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232B36">

    <LinearLayout
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/img_multiples_accounts" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_on_boarding3"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="@dimen/_160sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/content_on_boarding3"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btnGetStarted"
            android:layout_width="374dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_32sdp"
            android:background="@drawable/bg_rectangle_radius8_yellow"
            android:gravity="center"
            android:text="@string/get_started"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:paddingBottom="@dimen/_16sdp"
        android:text="@string/version_app"
        android:textColor="#666E75" />

</LinearLayout>