<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        style="@style/BgCardDialog"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/edit_address"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtName"
            style="@style/layoutPrivateKey"
            android:fontFamily="@font/roboto"
            android:hint="@string/name"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/color_text_token"
            android:textSize="@dimen/_12sdp" />

        <RelativeLayout style="@style/layoutPrivateKey">

            <EditText
                android:id="@+id/edtPrivateKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/imgQRCode"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto"
                android:hint="@string/privatekey_hint"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/color_text_token"
                android:textSize="@dimen/_12sdp" />

            <ImageView
                android:id="@+id/imgQRCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:src="@drawable/ic_qrcode" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:weightSum="2">

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/roboto"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnUpdateAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/roboto"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_24sdp"
        android:src="@drawable/ic_xmark_circle" />

</LinearLayout>