<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/_8sdp">

    <include
        layout="@layout/action_bar"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:src="@drawable/img_qr_code"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-32dp"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:text="@string/asset"
            android:textColor="#F2F5FA"
            android:textSize="@dimen/_13sdp" />

        <RelativeLayout
            android:id="@+id/btnAssetReceive"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/bg_rectangle_29313c"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:id="@+id/imgLogoCoin"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_welups" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_toEndOf="@id/imgLogoCoin"
                android:text="@string/unit"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_16sdp" />

            <ImageView
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_next" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:text="@string/address"
            android:textColor="#F2F5FA"
            android:textSize="@dimen/_13sdp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/bg_rectangle_29313c"
            android:padding="@dimen/_8sdp">

            <TextView
                android:id="@+id/tvAddressReceive"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="{text.address}"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <ImageView
                android:id="@+id/btnCopy"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_3sdp"
                android:src="@drawable/ic_copy" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
